test/TestPhases/exportinference/valid/structwithinit.blc
module exposes S


typealias MyInt = int32

const MY_VALUE: int32 = 42

struct S 
    var x: MyInt = MY_VALUE * 2
    var y: bool
extension 
    function f () returns MyInt
        return MY_VALUE
    end
end