test/TestPhases/exportinference/invalid/constForAbstract.blc

module exposes c

struct S 
    var x: bool
end

const c: S = {x = true}